# OM-Versuch

./: CMakeLists.txt  README.md
StartUp/: Default.ini  RecentlyOpened.ini
VA_Files/ME4/: CellAnalysisME4_Camera_Input_GlobalThresh.va  CellAnalysisME4_Camera_Input_Max.va  CellAnalysisME4_Camera_Input_MeanAddThresh.va  CellAnalysisME4_Test_Input_GlobalThresh.va  CellAnalysisME4_Test_Input_MeanAddThresh.va
VA_Files/ME5/: CellAnalysisME5_Camera_Input_GlobalThresh.va  CellAnalysisME5_Camera_Input_Max.va  CellAnalysisME5_Camera_Input_MeanAddThresh.va  CellAnalysisME5_Test_Input_GlobalThresh.va  CellAnalysisME5_Test_Input_MeanAddThresh.va
hap_files/ME4/: CellAnalysisME4_Camera_Input.hap  CellAnalysisME4_Camera_Input_Max.hap  CellAnalysisME4_Camera_Input_MeanAddThresh.hap  CellAnalysisME4_Test_Input.hap  CellAnalysisME4_Test_Input_MeanAddThresh.hap
include/: CL.h  CoaXPress.h  CoaXPress_includes.h  FPGA_InterfaceIni.h  FPGA_InterfaceIniDefines.h  FPGA_Interface_Core.h  FPGA_Interfaceiniselectionwindow.h  FPGA_Interfaceiniselectionwindow.ui  FPGA_Interfacemainwindow.h  FPGA_Interfacemainwindow.ui  IndexLUT.cpp  Kamera_Dummy.h  Kamera_JAI_Pulnix_AccuPixel.h  Kamera_Mikrotron_MC258x.h  Point_case_conflict.h  Project.h  RB_Plot.h  ROIAnalysis.h  ROIManager.h  Ringbuffer.h  RingbufferItem.h  SiSo_AppletIF.h  SiSo_Applet_min.h  Types.h  any.h  defines.h  infotag.h  inifile.h  kamera_I.h  point.h  stdutils.h  stringutils.h  tree.h  ui_FPGA_Interfaceiniselectionwindow.h  ui_FPGA_Interfacemainwindow.h
res/GeniCam/: CXP_MC258x.xml
res/StartUp/: DefaultSmall.ini
src/: CL.cpp  CoaXPress.cpp  FPGA_Interface.cpp  FPGA_InterfaceIni.cpp  FPGA_Interface_Core.cpp  FPGA_Interfaceiniselectionwindow.cpp  FPGA_Interfacemainwindow.cpp  Kamera_Dummy.cpp  Kamera_I.cpp  Kamera_JAI_Pulnix_AccuPixel.cpp  Kamera_Mikrotron_MC258x.cpp  Project.cpp  RB_Plot.cpp  ROIAnalysis.cpp  ROIManager.cpp  Ringbuffer.cpp  RingbufferItem.cpp  SiSo_AppletIF.cpp  SiSo_Applet_min.cpp  infotag.cpp  inifile.cpp  stdutils.cpp  stringutils.cpp
